# cobol-java-transpiler

./: README.md  check.sh  pyproject.toml
cbl/: CBACT01C.cbl  CBTRN01C.cbl
data/ascii/: acctdata.txt  dailytran.txt
data/bdb/: acctdata.bdb  carddata.bdb  cardxref.bdb  custdata.bdb
java/: Cbact01c.java  Cbtrn01c.java
output/: Cbact01c.java  Cbtrn01c.java
src/: main.py  prompt.txt
